# sfizioso-player

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  LICENSE-BSD-2-Clause.txt  NOTICE  README.md
.github/workflows/: build.yml
cmake/: AddWebviewUi.cmake
src/core_prefs/: PreferenceStore.cpp  PreferenceStore.h
src/player/: PlayerEditor.cpp  PlayerEditor.h  PlayerProcessor.cpp  PlayerProcessor.h  PortableBundle.cpp  PortableBundle.h
src/player/ui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/player/ui/src/: App.tsx  main.tsx  paramIds.ts  types.ts
src/player/ui/src/components/: CcControlsPanel.tsx  EnginePanel.tsx  ExperimentalPanel.tsx  InfoPanel.tsx  MpePanel.tsx  PanelSection.tsx  TopBar.tsx  TuningPanel.tsx
src/player/ui/src/hooks/: useCcControls.ts
src/player/ui/src/styles/: app.css  cc.css  engine.css  experimental.css  info.css  mpe.css  panel.css  topbar.css  tuning.css
src/player_core/: DebugMidiCapture.h  DebugMidiPanel.cpp  DebugMidiPanel.h  PlayerEngine.cpp  PlayerEngine.h  VirtualFs.h
src/ui-shared/src/: juceBridge.ts
src/ui-shared/src/components/: Dropdown.tsx  Keyboard.tsx  Knob.tsx  LevelMeter.tsx  ParamModule.tsx  Segmented.tsx
src/ui-shared/src/hooks/: useDesign.ts  useParam.ts
src/ui-shared/src/styles/: dropdown.css  global.css  keyboard.css  knob.css  meter.css  module.css  segmented.css
